--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.15",
+    "@react-email/tailwind": "^0.0.14",
+    "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
