--- a/package.json
+++ b/package.json
@@ -15,36 +15,36 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.15",
-    "@react-email/tailwind": "^0.0.14",
-    "framer-motion": "^11.0.14",
-    "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "@react-email/components": "^0.0.21",
+    "@react-email/tailwind": "^0.0.18",
+    "framer-motion": "^11.2.14",
+    "next": "^15.0.0-rc.0",
+    "react": "^19.0.0-rc-df783f9ea1-20240708",
+    "react-dom": "^19.0.0-rc-df783f9ea1-20240708",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.8.1",
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^3.2.0",
-    "sharp": "^0.33.2"
+    "resend": "^3.4.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-vertical-timeline-component": "^3.3.6",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3",
+    "eslint-config-next": "^15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "postcss": "^8",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "rimraf": "^5.0.5",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "lint-staged": "^15.2.7",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "rimraf": "^6.0.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs}": "eslint --cache --fix",
