--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.21",
     "@react-email/tailwind": "^0.0.18",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
     "next": "^15.0.0-rc.0",
     "react": "^19.0.0-rc-df783f9ea1-20240708",
