--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^3.4.0",
-    "sharp": "^0.33.4"
+    "resend": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
