--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-loader-spinner": "^6.1.6",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^3.4.0"
   },
