--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf .next",
-    "dev": "bun run clean && next dev",
+    "dev": "bun run clean && next dev --turbopack",
     "prebuild": "bun run clean",
     "build": "next build",
     "start": "next start",
@@ -21,9 +21,9 @@
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
     "framer-motion": "^11.2.14",
-    "next": "^15.0.0-rc.0",
-    "react": "^19.0.0-rc-df783f9ea1-20240708",
-    "react-dom": "^19.0.0-rc-df783f9ea1-20240708",
+    "next": "15.0.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
@@ -33,12 +33,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "^15.0.0-rc.0",
+    "eslint-config-next": "15.0.1",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
@@ -55,5 +55,9 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
