--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.21",
-    "@react-email/tailwind": "^0.0.18",
+    "@react-email/components": "^0.0.28",
+    "@react-email/tailwind": "^1.0.2",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
-    "firebase": "^10.14.0",
-    "framer-motion": "^11.2.14",
+    "firebase": "^11.0.2",
+    "framer-motion": "^12.0.0-alpha.1",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
@@ -29,10 +29,10 @@
     "react-intersection-observer": "^9.10.3",
     "react-loader-spinner": "^6.1.6",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^3.4.0"
+    "resend": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10",
+    "@types/node": "^22.9.0",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/react-vertical-timeline-component": "^3.3.6",
