--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-email/components": "^0.0.28",
     "@react-email/tailwind": "^1.0.2",
     "@vercel/speed-insights": "^1.0.12",
+    "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "framer-motion": "^12.0.0-alpha.1",
