--- a/package.json
+++ b/package.json
@@ -15,40 +15,41 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.28",
-    "@react-email/tailwind": "^1.0.2",
-    "@vercel/speed-insights": "^1.0.12",
-    "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
+    "@react-email/components": "^0.0.33",
+    "@react-email/tailwind": "^1.0.4",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
     "clsx": "^2.1.1",
-    "firebase": "^11.0.2",
-    "framer-motion": "^12.0.0-alpha.1",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.10.3",
+    "firebase": "^11.4.0",
+    "framer-motion": "^12.4.10",
+    "next": "15.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loader-spinner": "^6.1.6",
-    "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^4.0.0"
+    "react-vertical-timeline-component": "^3.5.3",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
     "@types/react-vertical-timeline-component": "^3.3.6",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "rimraf": "^6.0.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3"
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^4.0.12",
+    "typescript": "^5.8.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs}": "eslint --cache --fix",
@@ -56,9 +57,5 @@
   },
   "engines": {
     "node": ">=20"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
