--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "clean": "rimraf .next",
-    "dev": "bun run clean && next dev --turbopack",
-    "prebuild": "bun run clean",
+    "dev": "npm run clean && next dev --turbopack",
+    "prebuild": "npm run clean",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
