--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "clean": "npx rimraf .next",
-    "dev": "bun run clean && next dev --turbopack",
-    "prebuild": "bun run clean",
+    "dev": "yarn clean && next dev --turbopack",
+    "prebuild": "yarn clean",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,16 +15,16 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.33",
+    "@react-email/components": "^0.0.36",
     "@react-email/tailwind": "^1.0.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.0.12",
     "babel-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.0",
-    "next": "15.2.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "15.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
@@ -34,13 +34,13 @@
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.25.0",
+    "eslint-config-next": "15.3.1",
+    "eslint-config-prettier": "^10.1.2",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "minimatch": "^10.0.1",
@@ -53,7 +53,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs}": "eslint --cache --fix",
-    "*": "bun run format:fix"
+    "*": "yarn format:fix"
   },
   "engines": {
     "node": ">=20"
