--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "resend": "^4.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
     "@types/node": "^22.9.0",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
