--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@react-email/components": "^0.0.36",
     "@react-email/tailwind": "^1.0.2",
+    "@strapi/blocks-react-renderer": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.0.12",
     "babel-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
@@ -30,7 +32,8 @@
     "react-intersection-observer": "^9.10.3",
     "react-loader-spinner": "^6.1.6",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
