--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "babel-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.0",
+    "motion": "^12.23.3",
     "next": "15.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
