--- a/package.json
+++ b/package.json
@@ -24,17 +24,12 @@
     "@vercel/speed-insights": "^1.0.12",
     "babel-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
     "clsx": "^2.1.1",
-    "motion": "^12.23.3",
     "next": "15.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.10.3",
-    "react-loader-spinner": "^6.1.6",
-    "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^4.0.0",
-    "swiper": "^11.2.10"
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -42,7 +37,6 @@
     "@types/node": "^22.9.0",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "@types/react-vertical-timeline-component": "^3.3.6",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.25.0",
     "eslint-config-next": "15.3.1",
