--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "clean": "npx rimraf .next",
-    "dev": "yarn clean && next dev --turbopack",
+    "dev": "yarn clean && next dev",
     "prebuild": "yarn clean",
     "build": "next build",
     "start": "next start",
