--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "yarn clean",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "format": "prettier --check --ignore-unknown",
     "format:fix": "prettier --write --ignore-unknown",
     "prepare": "husky",
@@ -20,7 +20,7 @@
     "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^15.3.5",
+    "@next/bundle-analyzer": "16.0.3",
     "@polar-sh/nextjs": "^0.7.0",
     "@polar-sh/sdk": "^0.41.1",
     "@react-email/components": "^0.0.36",
@@ -37,26 +37,25 @@
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.3.1",
+    "next": "16.0.3",
     "postgres": "^3.4.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "resend": "^4.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.9.0",
-    "@types/react": "19.1.2",
-    "@types/react-dom": "19.1.2",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.25.0",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "^10.1.2",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
@@ -75,5 +74,9 @@
   },
   "engines": {
     "node": ">=22"
+  },
+  "resolutions": {
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3"
   }
 }
