--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "clean": "npx rimraf .next",
-    "dev": "yarn clean && next dev --turbopack",
-    "prebuild": "yarn clean",
-    "build": "next build --turbopack",
+    "dev": "bun clean && next dev",
+    "prebuild": "bun clean",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "format": "prettier --check --ignore-unknown",
@@ -37,10 +37,10 @@
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "16.0.3",
+    "next": "16.0.7",
     "postgres": "^3.4.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "resend": "^4.0.0",
@@ -55,7 +55,7 @@
     "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.25.0",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.2",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
@@ -70,7 +70,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs}": "eslint --cache --fix",
-    "*": "yarn format:fix"
+    "*": "bun format:fix"
   },
   "engines": {
     "node": ">=22"
