--- a/package.json
+++ b/package.json
@@ -12,17 +12,10 @@
     "format": "prettier --check --ignore-unknown",
     "format:fix": "prettier --write --ignore-unknown",
     "prepare": "husky",
-    "lint-staged": "lint-staged",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx src/db/migrate.ts",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx src/db/seed.ts"
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@next/bundle-analyzer": "16.0.3",
-    "@polar-sh/nextjs": "^0.7.0",
-    "@polar-sh/sdk": "^0.41.1",
     "@react-email/components": "^0.0.36",
     "@react-email/tailwind": "^1.0.2",
     "@strapi/blocks-react-renderer": "^1.0.2",
@@ -34,34 +27,24 @@
     "caniuse-lite": "^1.0.30001759",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "drizzle-kit": "^0.31.6",
-    "drizzle-orm": "^0.44.7",
-    "jose": "^6.1.0",
-    "jsonwebtoken": "^9.0.2",
     "next": "16.0.7",
-    "postgres": "^3.4.7",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "resend": "^4.0.0",
-    "zod": "^4.1.12"
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.9.0",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.19",
-    "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9.25.0",
     "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.2",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "minimatch": "^10.0.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
