--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "caniuse-lite": "^1.0.30001759",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "resend": "^4.0.0"
@@ -37,8 +37,8 @@
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@types/node": "^22.9.0",
-    "@types/react": "19.2.6",
-    "@types/react-dom": "19.2.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.25.0",
     "eslint-config-next": "16.0.7",
