--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.9.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "autoprefixer": "^10.4.19",
     "eslint": "^9.25.0",
     "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.2",
@@ -47,9 +47,9 @@
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "rimraf": "^6.0.0",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.20.6",
     "typescript": "^5.5.3"
   },
